# Sudoku

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  four.txt  sudoku-1.txt  sudoku.cabal  sudoku.hs
Sudoku/: Base.hs  Generate.hs
Sudoku/Solver/: Backtracking.hs  Logic.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.6.5/: nstate-0.2.0.5-inplace.conf  package.cache
examples/: hard.txt  test.txt  three.txt  two.txt
src/: Main.hs
src/Control/: Union.hs
src/Data/: Union.hs
src/Sudoku/: Base.hs  Generate.hs
src/Sudoku/Solver/: Backtracking.hs  Logic.hs
test/: sudoku-2.txt  sudoku-3.txt  sudoku-4.txt
