name:               sudoku
version:            0.1.0.3
synopsis:           A sudoku solver/generator
description:        A Sudoku solver/generator, with both backtracking and logic-based
                    solvers.
license:            GPL-3
license-file:       LICENSE
author:             Stuart A. Kurtz
maintainer:         stuart@cs.uchicago.edu
copyright:          © 2013-2016, Stuart A. Kurtz, All Rights Reserved.
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable sudoku
  main-is           : Main.hs
  build-depends     : base, containers, mtl, random, nstate
  hs-source-dirs    : src
  default-language  : Haskell2010
  ghc-options       : -Wall
